# SimpleDNS

./: .gitignore  CMakeLists.txt  client.c  cnus.c  dns.h  edu.c  gov.c  local-server.c  local_server.c  main.c  orgcom.c  root.c
data/: cnus.txt  edu.txt  gov.txt  local_server_cache.txt  orgcom.txt  orgcomA.txt  orgcomC.txt  orgcomM.txt  root.txt
include/: client.h  cnus.h  dns.h  edu.h  gov.h  local_server.h  orgcom.h  root.h  server.h  socket.h
src/: client.c  cnus.c  dns.c  edu.c  gov.c  local_server.c  orgcom.c  root.c  server.c  socket.c
